// SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package workflows.v1;

option go_package = "github.com/nvidia/bare-metal-manager-rest/workflow-schema/proto";

import "google/protobuf/timestamp.proto";

// HealthStatus - site agent health status info sent to cloud
message HealthStatus {
  // Site Inventory collection status via Cron
  HealthStatusMsg SiteInventoryCollection = 1;
  // Site GRPC interface connection status
  HealthStatusMsg SiteControllerConnection = 2;
  // Site Agent HA Status
  HealthStatusMsg SiteAgentHighAvailability = 3;
  // Reported timestamp of Health status
  google.protobuf.Timestamp timestamp = 4;
}

// HealthState - possible health status for a given state
enum HealthState {
  UNKNOWN = 0;
  UP = 1;
  DOWN = 2;
  ERROR = 3;
}

// HealthStatusMsg - status of given state in Site agent
message HealthStatusMsg {
  HealthState State = 1;
  string Description = 2;
}
